name:                  monitoring
version:               0.1.0.0
license:               BSD3
license-file:          LICENSE
author:                Sam T.
maintainer:            Sam T. <pxqr.sta@gmail.com>
copyright:             (c) 2013, Sam T.
category:              System, Monitoring
build-type:            Simple
cabal-version:         >=1.10
tested-with:           GHC == 7.6.3
homepage:              https://github.com/pxqr/monitoring
bug-reports:           https://github.com/pxqr/monitoring/issues
synopsis:              Remote event-driven process monitoring.
description:


extra-source-files:    res/listener.js
                       res/style.css

source-repository head
  type:                git
  location:            git://github.com/pxqr/monitoring.git

library
  default-language:    Haskell2010
  default-extensions:  PatternGuards
                     , OverloadedStrings
                     , RecordWildCards
  hs-source-dirs:      src
  exposed-modules:     System.Monitoring
                     , System.Monitoring.GC
  other-modules:

  build-depends:       base == 4.6.*
                     , mtl
                     , stm

                     , bytestring
                     , text
                     , unordered-containers

                     , aeson
                     , network
                     , yesod
                     , yesod-static
                     , websockets
  cpp-options:         -DSTATIC_DIR="res"

executable test
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:       base == 4.6.*
                     , monitoring
  ghc-options:         -O2